[project]
name = "cgwire-checks"
version = "0.2.0"
description = "Script to test CGWire Docker image"
authors = [{ name = "Nicolas Ledez", email = "github.public@ledez.net" }]
requires-python = "~=3.11"
dependencies = ["requests>=2.31.0,<3"]

[dependency-groups]
tests = [
    "pytest-cov>=4.1.0,<5",
    "pytest>=7.4.2,<8",
    "coveralls>=3.3.1,<4",
    "flake8>=6.1.0,<7",
    "coverage>=6.5.0",
]

[tool.uv]
default-groups = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=cgwire_checks --cov=test_cgwire_checks"
